# kutri-resilience-index

./: .gitignore  CHANGELOG.md  KUTRI_Engine.ipynb  KasRessilianceIndex.docx  LICENSE  PUSH_INSTRUCTIONS.md  README.md  kutri-publication-ready.bundle  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: README.md
data/processed/: ahp_pairwise_matrix.csv  kutri_indicators.csv  pillar_weights_nominal.json
docs/: METHODOLOGY.md
kutri/: .gitignore  CITATION.cff  README.md
kutri/.github/workflows/: tests.yml
kutri/docs/: DATA_DICTIONARY.md  FUTURE_WORK.md  LIMITATIONS.md
kutri/outputs/: kutri_results.csv  pillar_scores.csv
kutri/reports/: README.md
kutri/reports/supplementary/: KUTRI_Ham_Veri_Katalogu_Ek_Rapor_v2.docx
kutri/src/kutri/: __init__.py  aggregation.py  ahp.py  reporting.py  schema.py  uncertainty.py
kutri/tests/: test_aggregation.py  test_normalization.py  test_schema.py
outputs/: monte_carlo_summary.csv  sensitivity_tornado.csv
reports/: KUTRI_Resilience_Index_AUDITED.md
reports/archive/: KUTRI_Resilience_Index_Report_v2.docx
reports/supplementary/: KUTRI_Veri_Ve_Yontem_Ek_Raporu_v2.docx
src/kutri/: normalization.py  plotting.py  sensitivity.py
tests/: test_ahp.py  test_reproduce_scores.py
