[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kutri"
version = "1.0.0"
description = "KUTRI: a reproducible urban-territorial resilience index prototype for Kaş/Bayındır, Antalya (five-pillar composite indicator framework)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "KUTRI project contributors" }]
keywords = ["resilience", "composite-indicator", "MCDA", "AHP", "urban-planning", "reproducible-research"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.4"]
notebook = ["jupyter", "nbformat", "nbclient", "ipykernel"]
dev = ["pytest>=7.0", "matplotlib>=3.4", "jupyter", "nbformat", "nbclient", "ipykernel"]

[project.scripts]
kutri-report = "kutri.reporting:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::RuntimeWarning"]
